[package]
name = "colorize-macros"
version = "0.5.1"
edition = "2021"
description = "A set of Rust macros to assist in turning text into colors for printing on the terminal."
readme = "README.md"
repository = "https://github.com/jpal91/colorize"
license = "MIT"
keywords = ["ansi", "color", "macros"]
categories = ["command-line-interface"]
exclude = [".github/**"]

[lib]
name = "colorize"
path = "src/lib.rs"

[dependencies]
