workspace = { members = ["proc-colorize"] }
[package]
name = "colorize-macros"
version = "0.7.0"
edition = "2021"
description = "A set of Rust macros to assist in turning text into colors for printing on the terminal."
readme = "README.md"
repository = "https://github.com/jpal91/colorize"
license = "MIT"
keywords = ["ansi", "color", "macros"]
categories = ["command-line-interface"]
exclude = [".github/**", "main.rs", "assets/**"]

[lib]
name = "colorize"
path = "src/lib.rs"

[[bin]]
name = "workshop"
path = "main.rs"
doc = false

[dependencies]
paste = "1.0.14"
proc-colorize = { path = "proc-colorize", default-features = false, optional = true }

[features]
default = []
proc = ["dep:proc-colorize"]

[package.metadata.docs.rs]
features = ["default"]