[package]
name = "proc-colorize"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^1.0.70"
quote = "^1.0.30"
syn = { version="^2.0.48", features = ["parsing", "extra-traits", "full"] }
