[package]
name = "colorize-proc-macro"
version = "0.1.0"
edition = "2021"
description = "Proc macro version of colorize from the colorize-macros package"
license = "MIT"
licence-file = "../LICENSE"
repository = "https://github.com/jpal91/colorize"
documentation = "https://docs.rs/colorize-macros/latest/colorize/"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^1.0.70"
quote = "^1.0.30"
syn = { version="^2.0.48", features = ["parsing", "extra-traits", "full"] }
